...
                                                        </view>
                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mm-i9-Mjl">
                                                            <rect key="frame" x="0.0" y="12" width="269" height="20.5"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1No-CQ-F6h">
                                                                    <rect key="frame" x="0.0" y="0.0" width="43.5" height="20.5"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Movie Title"/>
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <nil key="textColor"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yDq-oO-FXe">
                                                                    <rect key="frame" x="43.5" y="0.0" width="213" height="20.5"/>
...
            <point key="canvasLocation" x="-255" y="155"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="Ajz-Ps-mr1">
            <objects>
                <hostingController id="Kgk-NV-gkC" customClass="MoviesFavoritesHoustingViewController" customModule="TheMoviesDB" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorites" image="star" catalog="system" id="fAh-M5-Acy"/>
                </hostingController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gvf-Mg-ZIJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-255" y="847"/>
        </scene>
    </scenes>
...
